<resources>
    <string name="app_name" translatable="false">Sushi</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="my_anime_list">My Anime List</string>
    <string name="my_manga_list">My Manga List</string>
    <string name="logout">Log Out From This Account</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="anime_schedule">Anime Schedule</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="clubs">Clubs</string>
    <string name="forum">Forum</string>
    <string name="news">News/Articles</string>
    <string name="promotion">Promotional Content</string>
    <string name="settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="faq">Frequently asked questions</string>
    <string name="title_anime">ANIME</string>
    <string name="title_manga">MANGA</string>
    <string name="title_other">OTHER</string>
    <string name="title_preferences">APP SETTINGS</string>
    <string name="title_search_mal">Search MAL</string>
    <string name="title_support_development">Support development</string>
    <string name="top_anime">Top Anime</string>
    <string name="top_manga">Top Manga</string>
    <string name="currently_airing">Currently Airing</string>
    <string name="latest_news">Latest News</string>
    <string name="latest_promotional_content">Latest Promotional</string>
    <string name="upcoming_anime">Upcoming Anime</string>
    <string name="user_anime_recom">Anime Recommendations</string>
    <string name="seasonal_anime">Seasonal</string>
    <string name="see_all">See All</string>
    <string name="all_characters">All Characters</string>
    <string name="all_reviews">All Reviews</string>
    <string name="all_anime_staff">All Anime Staff</string>
    <string name="fake_anime_title" translatable="false">Jujutsu Kaisen</string>
    <string name="fake_anime_score" translatable="false">8.2</string>
    <string name="fake_anime_type" translatable="false">TV</string>
    <string name="fake_manga_title" translatable="false">Beserk</string>
    <string name="fake_manga_score" translatable="false">9.2</string>
    <string name="fake_manga_type" translatable="false">MANGA</string>
    <string name="filter">Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_score">Score</string>
    <string name="sort_by_updated">Last Updated</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="unknown">Unknown</string>
    <string name="other">Other</string>
    <string name="airing">Airing</string>
    <string name="upcoming">Upcoming</string>
    <string name="tv">TV</string>
    <string name="ova">OVA</string>
    <string name="movie">Movie</string>
    <string name="special">Special</string>
    <string name="by_popularity">By Popularity</string>
    <string name="type">Type: </string>
    <string name="status">Status: </string>
    <string name="rating">Rating: </string>
    <string name="status_score">Score: </string>
    <string name="episodes">Episodes: </string>
    <string name="start_season">Start Season: </string>
    <string name="rewatching">Rewatching: </string>
    <string name="episode_duration">Ep Duration: </string>
    <string name="chapters">Chapters: </string>
    <string name="volumes">Volumes: </string>
    <string name="start_date">Start Date: </string>
    <string name="rereading">Rereading: </string>
    <string name="chapters_read">Chapters: </string>
    <string name="volumes_read">Volumes: </string>
    <string name="add_to_list">Add To List</string>
    <string name="all">All</string>
    <string name="manga">Manga</string>
    <string name="novels">Novels</string>
    <string name="oneshots">Oneshots</string>
    <string name="doujin">Doujin</string>
    <string name="manhwa">Manhwa</string>
    <string name="manhua">Manhua</string>
    <string name="popularity">Popularity</string>
    <string name="favorites">Favorites</string>
    <string name="score">Score </string>
    <string name="friend_list">Friends</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="content_description_filter">Filter the list by year and seasons.</string>
    <string name="year">Year</string>
    <string name="season">Season</string>
    <string name="synopsis">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="staff">Staff</string>
    <string name="reviews">Reviews</string>
    <string name="related_anime">Related Anime</string>
    <string name="related_manga">Related Manga</string>
    <string name="recommendations">Recommendations</string>
    <string name="videos">Videos</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_watch">Plan To Watch</string>
    <string name="reading">Reading</string>
    <string name="plan_to_read">Plan To Read</string>
    <string name="about">About</string>
    <string name="voice_actor">Voice Actors</string>
    <string name="animeography">Animeography</string>
    <string name="mangaography">Mangaography</string>
    <string name="volume">Volume </string>
    <string name="save">Update</string>
    <string name="remove">Remove</string>
    <string name="nothing">--</string>
    <string name="score_one">1 (Appalling)</string>
    <string name="score_two">2 (Horrible)</string>
    <string name="score_three">3 (Very Bad)</string>
    <string name="score_four">4 (Bad)</string>
    <string name="score_five">5 (Average)</string>
    <string name="score_six">6 (Fine)</string>
    <string name="score_seven">7 (Good)</string>
    <string name="score_eight">8 (Very Good)</string>
    <string name="score_nine">9 (Great)</string>
    <string name="score_ten">10 (Masterpiece)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="number_of_members">Number Of Members</string>
    <string name="search_anime">Anime</string>
    <string name="search_manga">Manga</string>
    <string name="dev_name" translatable="false">Vishal Kashi</string>
    <string name="dev_role" translatable="false">Lead developer/Designer</string>
    <string name="dev_profile_image" translatable="false">https://avatars0.githubusercontent.com/u/27971772?s=400&amp;u=15f384f5df30bebf686d716499f542a23f77ab79&amp;v=4</string>
    <string name="dev_description">Android developer and Graphic/UI/UX designer from India. Hope you liked the app. Contact me or checkout more of my work below.</string>
    <string name="social_twitter">Twitter</string>
    <string name="social_dribbble">Dribbble</string>
    <string name="social_twitter_link" translatable="false">https://twitter.com/iamvishalkashi</string>
    <string name="dev_email_id" translatable="false">vishalkashi36@gmail.com</string>
    <string name="social_dribbble_link" translatable="false">https://dribbble.com/VishalKashi</string>
    <string name="social_discord_link" translatable="false">https://discord.gg/n5GmTKAJHs</string>
    <string name="sushi_play_link" translatable="false">https://play.google.com/store/apps/details?id=com.destructo.sushi_mal</string>
    <string name="sushi_translate_link" translatable="false">https://bit.ly/translate-sushi</string>
    <string name="welcome_to_sushi_title">Welcome to Sushi</string>
    <string name="welcome_text">Your new friend to help you browse MyAnimeList and manage your Anime and Manga library with ease.\n Let\'s get started!</string>
    <string name="login_button_text">Log In With MyAnimeList</string>
    <string name="pref_title_general">General</string>
    <string name="pref_nsfw">Show NSFW content</string>
    <string name="pref_nsfw_description">Show/Hide NSFW content</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_title_look_and_feel">Look And Feel</string>
    <string name="pref_desc_look_and_feel">Themes and other customizations</string>
    <string name="pref_title_about_app">About App</string>
    <string name="pref_desc_about_app">Developers and app licenses</string>
    <string name="pref_title_faq">F.A.Q</string>
    <string name="pref_desc_faq">Answers to some of the common questions</string>
    <string name="pref_title_app_settings">App Settings</string>
    <string name="pref_desc_app_settings">Change app related settings</string>
    <string name="pref_title_discord">Join The Discord Server</string>
    <string name="pref_desc_discord">To report bugs, feature requests/suggestions etc.</string>
    <string name="pref_title_rate_app">Rate And Review App</string>
    <string name="pref_changelog_title">Changelog</string>
    <string name="pref_changelog_desc">See the complete changelog of the current version</string>
    <string name="pref_desc_rate_app">Please leave a rating and review if you like the app.</string>
    <string name="pref_title_send_feedback">Send Feedback</string>
    <string name="pref_desc_send_feedback">Send your feedback and suggestions.</string>
    <string name="pref_title_donation">Donate</string>
    <string name="pref_desc_donate_desc">If you want to support me and the development you can donate here</string>
    <string name="pref_title_open_source_license">Open Source License</string>
    <string name="pref_desc_open_source_license">List of open source licenses.</string>
    <string name="pref_title_app_version">App Version</string>
    <string name="pref_title_translate">Translate Sushi</string>
    <string name="credit_category_translator" translatable="false">Translators</string>
    <string name="credit_category_dev" translatable="false">Developers</string>
    <string name="credit_dev_one" translatable="false">axiel7</string>
    <string name="credit_dev_one_desc" translatable="false">Helped with api and development</string>
    <string name="credit_one" translatable="false">axiel7</string>
    <string name="credit_one_desc" translatable="false">Spanish translations</string>
    <string name="credit_two" translatable="false">Nive</string>
    <string name="credit_two_desc" translatable="false">German translations</string>
    <string name="credit_three" translatable="false">Karmaa_</string>
    <string name="credit_three_desc" translatable="false">French translations</string>
    <string name="credit_four" translatable="false">PlayerZ0</string>
    <string name="credit_four_desc" translatable="false">Portuguese translations</string>
    <string name="credit_five" translatable="false">serverjay</string>
    <string name="credit_five_desc" translatable="false">Portuguese translations</string>
    <string name="credit_seven" translatable="false">AsukaLangleySoryu</string>
    <string name="credit_seven_desc" translatable="false">Russian translations</string>
    <string name="update_finish_date">Finish Date:</string>
    <string name="pick_a_start_date">Pick start date</string>
    <string name="pick_a_finish_date">Pick finish date</string>
    <string name="today">Set Today</string>
    <string name="promo_title">Buy Sushi Pro To Get</string>
    <string name="promo_description">• No more annoying ads.
        \n• Dark theme, Night theme and Amoled theme.
        \n• Support and keep this project alive.
        \n• And oh no more annoying messages like this ;)
    </string>
    <string name="buy_now">Buy Now</string>
</resources>