<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/credit_category_dev">

        <Preference
            app:summary="@string/credit_dev_one_desc"
            app:title="@string/credit_dev_one" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/credit_category_translator">

        <Preference
            app:summary="@string/credit_one_desc"
            app:title="@string/credit_one" />

        <Preference
            app:summary="@string/credit_two_desc"
            app:title="@string/credit_two" />

        <Preference
            app:summary="@string/credit_three_desc"
            app:title="@string/credit_three" />

        <Preference
            app:summary="@string/credit_four_desc"
            app:title="@string/credit_four" />

        <Preference
            app:summary="@string/credit_five_desc"
            app:title="@string/credit_five" />

        <Preference
            app:summary="@string/credit_seven_desc"
            app:title="@string/credit_seven" />


    </PreferenceCategory>
</PreferenceScreen>