<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.preferences.settings.MainSettingsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolBarWithNavigation"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="@string/settings"
                app:titleTextAppearance="@style/TextAppearance.Sushi.H1" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/pro_promo"
                style="@style/Widget.Sushi.ItemCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/default_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/promo_title"
                        style="@style/TextAppearance.Sushi.H2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:text="@string/promo_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/promo_desc"
                        style="@style/TextAppearance.Sushi.B2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:text="@string/promo_description"
                        android:textColor="?attr/textColorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/promo_title" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/promo_cta"
                        style="@style/SushiPrimaryButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:layout_marginBottom="8dp"
                        android:text="@string/buy_now"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/promo_desc" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.destructo.sushi.views.SettingsListView
                android:id="@+id/look_and_feel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pro_promo"
                app:setting_title="@string/pref_title_look_and_feel"
                app:setting_description="@string/pref_desc_look_and_feel"
                app:setting_icon="@drawable/ic_palette_line"
                />

            <com.destructo.sushi.views.SettingsListView
                android:id="@+id/app_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/look_and_feel"
                app:setting_title="@string/pref_title_app_settings"
                app:setting_description="@string/pref_desc_app_settings"
                app:setting_icon="@drawable/ic_settings_line"
                />

            <com.destructo.sushi.views.SettingsListView
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_settings"
                app:setting_title="@string/pref_title_faq"
                app:setting_description="@string/pref_desc_faq"
                app:setting_icon="@drawable/ic_question_line"
                />

            <com.destructo.sushi.views.SettingsListView
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq"
                app:setting_title="@string/pref_title_about_app"
                app:setting_description="@string/pref_desc_about_app"
                app:setting_icon="@drawable/ic_information_line"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>