<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        >

        <Spinner
            android:id="@+id/anime_status_spinner"
            style="@style/SpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/add_button_height"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:text="@string/episodes"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/decrement_episode_button"
            style="@style/SushiImageButton"
            android:layout_width="@dimen/add_button_height"
            android:layout_height="@dimen/add_button_width"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:stateListAnimator="@null"
            android:insetLeft="@dimen/add_button_inset"
            android:insetTop="@dimen/add_button_inset"
            android:insetRight="@dimen/add_button_inset"
            android:insetBottom="@dimen/add_button_inset"
            app:icon="@drawable/ic_subtract_fill"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView45" />

        <EditText
            android:id="@+id/episode_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:text="0"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/increment_episode_button"
            app:layout_constraintStart_toEndOf="@+id/decrement_episode_button"
            app:layout_constraintTop_toBottomOf="@+id/textView45" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/increment_episode_button"
            style="@style/SushiImageButton"
            android:layout_width="@dimen/add_button_height"
            android:layout_height="@dimen/add_button_width"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:stateListAnimator="@null"
            android:insetLeft="@dimen/add_button_inset"
            android:insetTop="@dimen/add_button_inset"
            android:insetRight="@dimen/add_button_inset"
            android:insetBottom="@dimen/add_button_inset"
            app:icon="@drawable/ic_add_fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView45" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:text="@string/score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anime_status_spinner" />

        <SeekBar
            android:id="@+id/anime_score_seek_bar"
            style="@style/Widget.Sushi.Seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:max="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />


        <Button
            android:id="@+id/update_anime_status_button"
            style="@style/SushiPrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/today_checkbox_2" />


        <Button
            android:id="@+id/remove_anime_button"
            style="@style/Widget.Sushi.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anime_finish_date_txt" />

        <TextView
            android:id="@+id/anime_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:text="@string/nothing"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView46"
            app:layout_constraintStart_toEndOf="@+id/textView46" />

        <TextView
            android:id="@+id/textView89"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:text="@string/start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anime_score_seek_bar" />

        <TextView
            android:id="@+id/anime_start_date_txt"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:background="@drawable/drawable_secondary_bg"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:text="@string/pick_a_start_date"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView89"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView91"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/update_finish_date"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anime_start_date_txt" />

        <TextView
            android:id="@+id/anime_finish_date_txt"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:background="@drawable/drawable_secondary_bg"
            android:text="@string/pick_a_finish_date"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView91"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/today_checkbox_1"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/today"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView89" />

        <CheckBox
            android:id="@+id/today_checkbox_2"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.Sushi.B2"
            android:text="@string/today"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView91" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>